Fix vertical align on home page

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ hr {
   margin-bottom: 1.5em;
 }
 
+.-content {
+  height: calc(100% - 5.5em);
+}
+
 ::selection {
   background: rgba(47, 30, 70, 100);
 }
